--- a/apps/core/appsettings.json
+++ b/apps/core/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "ValidAudience": "Audience",
+    "ValidIssuer": "Issuer",
+    "Secret": "VerySecretStringDoNotDisclose"
+  }
 }
