feat: Cleaned up older implementation

--- a/apps/core/src/Web/appsettings.json
+++ b/apps/core/src/Web/appsettings.json
@@ -9,12 +9,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "IdentityServer": {
-    "Clients": {
-      "AudioStreaming.Web": {
-        "Profile": "IdentityServerSPA"
-      }
-    }
-  },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "ValidAudience": "Audience",
+    "ValidIssuer": "Issuer",
+    "Secret": "VerySecretStringDoNotDisclose"
+  }
 }
