--- a/apps/core/src/Web/appsettings.Development.json
+++ b/apps/core/src/Web/appsettings.Development.json
@@ -5,9 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "IdentityServer": {
-    "Key": {
-      "Type": "Development"
-    }
+  "JWT": {
+    "ValidAudience": "Audience",
+    "ValidIssuer": "Issuer",
+    "Secret": "VerySecretStringDoNotDisclose"
   }
 }
