feat: Configurable content path

--- a/apps/core/src/Web/appsettings.Development.json
+++ b/apps/core/src/Web/appsettings.Development.json
@@ -9,5 +9,6 @@
     "ValidAudience": "Audience",
     "ValidIssuer": "Issuer",
     "Secret": "VerySecretStringDoNotDisclose"
-  }
+  },
+  "ContentPath": "../../../../content"
 }
