--- a/apps/core/src/Web/appsettings.json
+++ b/apps/core/src/Web/appsettings.json
@@ -14,5 +14,6 @@
     "ValidAudience": "Audience",
     "ValidIssuer": "Issuer",
     "Secret": "VerySecretStringDoNotDisclose"
-  }
+  },
+  "ContentPath": "../../../../content"
 }
